<?xml version="1.0" encoding="utf-8"?>
<resources>

    
    <string name="hello">Hello World, IQArena!</string>
    <string name="app_name">IQArena</string>

    <!-- login -->
    <string name="login_title">LOGIN</string>
    <string name="login_username_title">Username:</string>
    <string name="login_password_title">Password:</string>
    <string name="login_signin">Login</string>
    <string name="login_sign_up_here">Don\'t have an account?</string>
    <string name="login_signup">Sign up</string>
    <string name="login_result">Result</string>
    <string name="login_remember">Remember me?</string>

    <!-- register -->
    <string name="register_title">REGISTER</string>
    <string name="register_repassword">Re-password:</string>
    <string name="register_email">Email:</string>
    <string name="regiser_button_register">Register</string>

    <!-- room -->
    
    <!-- create new room -->
    <string name="new_room_spinner_max_member">Choose a number</string>
    <string name="new_room_spinner_bet_score">Choose a score</string>
    <string name="new_room_spinner_time_per_question">Choose a time</string>

</resources>