<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg_app2"
    android:padding="5dp"
    android:scrollbars="none" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_form1"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="10dp" >

            <TextView
                android:id="@+id/tvRegisterResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/login_result"
                android:textColor="#00e673"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView6"
                style="@style/TextViewStyle"
                android:text="@string/login_username_title" />

            <EditText
                android:id="@+id/editText1"
                style="@style/EditTextStyle"
                android:inputType="textPersonName" >
            </EditText>

            <TextView
                android:id="@+id/textView2"
                style="@style/TextViewStyle"
                android:text="@string/login_password_title" />

            <EditText
                android:id="@+id/editText2"
                style="@style/EditTextStyle"
                android:inputType="textPassword" >
            </EditText>

            <TextView
                android:id="@+id/textView3"
                style="@style/TextViewStyle"
                android:text="@string/register_repassword" />

            <EditText
                android:id="@+id/editText3"
                style="@style/EditTextStyle"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/textView4"
                style="@style/TextViewStyle"
                android:text="@string/register_email" />

            <EditText
                android:id="@+id/editText4"
                style="@style/EditTextStyle"
                android:inputType="textEmailAddress" />

            <RelativeLayout
                android:id="@+id/relativeLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <Button
                    android:id="@+id/btnRegister"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:layout_margin="10dp"
                    android:background="@drawable/button_style1"
                    android:paddingBottom="10dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/regiser_button_register"
                    android:textColor="#ffffffff"
                    android:textStyle="bold" />
            </RelativeLayout>
    </LinearLayout>

</ScrollView>